feat(bin): add update task with option to skip

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mkdirp": "^0.5.1",
     "p-map": "^1.2.0",
     "pify": "^3.0.0",
+    "yargs": "^11.0.0",
     "zen-observable": "^0.8.8"
   }
 }
