--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "description": "Node.js utility to dump the local homebrew registry to JSON files.",
   "scripts": {
-    "start": "node lib/index.js"
+    "start": "node lib/index.js",
+    "dump": "npm run start -- --commit"
   },
   "repository": {
     "type": "git",
